# dpat_imageanalysisapi_sdk

./: LICENSE.txt  README.md
contrib/python_modules/sectra_dpat_client/: .bandit.yml  .gitignore  Makefile  README.md  requirements.txt  setup.cfg  setup.py
contrib/python_modules/sectra_dpat_client/sectra_dpat_client/: __init__.py  errors.py  helpers.py
contrib/python_modules/sectra_dpat_client/sectra_dpat_client/ai/: __init__.py  client.py
contrib/python_modules/sectra_dpat_client/sectra_dpat_client/ai/schemas/: __init__.py  image.py  info.py  invocation.py  quality_control.py  registration.py  results.py
contrib/python_modules/sectra_dpat_client/sectra_dpat_client/qido/: __init__.py  client.py  schemas.py
examples/python/: README.md
examples/python/dicom_examples/: README.md  requirements.txt  send_cstore.py
examples/python/ia_app_basic/: .gitignore  README.md  flask_run.bat  flask_run.sh  pyproject.toml  setup.py
examples/python/ia_app_basic/pcaddemo/: __init__.py  __main__.py  analysisapi.py  geometry.py  webserver.py
examples/python/ia_wholeslide/: .gitignore  README.md  flask_run.bat  flask_run.sh  pyproject.toml  worker_run.sh
examples/python/ia_wholeslide/src/dpat_wholeslide/: __init__.py  __main__.py  dzidesc.py  geometry.py  locks.py  multipart.py  utils.py  version.py  webserver.py  worker.py
examples/python/server_side_application_basic/: README.md  feedback_server.py  generate_tokens_server.py  launch_analysis_server.py  requirements.txt  send_annotations_server.py  utils.py
examples/python/server_side_application_basic/feedback/slideName/results/: slideName_patches.csv
examples/typescript/ia_external_viewer/: README.md
examples/typescript/ia_external_viewer/backend/: .env  .env.example  README.md  pyproject.toml
examples/typescript/ia_external_viewer/backend/src/dpat_ia_api_external_viewer/: app.py  models.py  settings.py
examples/typescript/ia_external_viewer/backend/src/dpat_ia_api_external_viewer/routers/: image_analysis.py
examples/typescript/ia_external_viewer/viewer/: README.md  index.html  package-lock.json  package.json
examples/typescript/ia_external_viewer/viewer/src/: App.css  App.tsx  constants.ts  examState.ts
examples/typescript/ia_external_viewer/viewer/src/api/: ImageAnalysisApi.ts
examples/typescript/ia_external_viewer/viewer/src/components/: Clear.tsx  Close.tsx  Header.tsx  ImageSelector.tsx  ImageViewer.tsx  Load.tsx  OpenSeadragonViewer.tsx
examples/typescript/ia_external_viewer/viewer/src/models/: Application.ts  Exam.ts  ImageInfo.ts  Result.ts
ids7client/python/: Makefile  README.md  extra_requirements.txt  setup.cfg  setup.py
ids7client/python/ids7client/: __init__.py  errors.py  helpers.py
ids7client/python/ids7client/ai/: __init__.py  client.py
ids7client/python/ids7client/ai/schemas/: __init__.py  common.py  invocation.py  results.py
ids7client/python/ids7client/qido/: __init__.py  client.py  schemas.py
python_modules/sectra_dpat_downloader/: .dockerignore  Dockerfile  README.md  pyproject.toml
python_modules/sectra_dpat_downloader/sectra_dpat_downloader/: __init__.py  cli.py  client.py  http_client.py  models.py  multipart.py  result_models.py
python_modules/sectra_dpat_downloader/tests/: test_http_client.py  test_multipart.py  test_result_operations.py
