[project]
name = "pcaddemo"
version = "0.1.0"
description = ""
authors = [
    { name = "Martin Lindvall", email = "martin.lindvall@sectra.com" }
]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.0.3",
    "requests>=2.32.3",
    "shapely>=2.1.1, <3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=24.10.0",
]
